# lxmf_react_native_rust

./: .easignore  .gitignore  FFI_WIRING.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION.md  QUICKSTART.md  README.md  REAL_APP_PROMPT.md  START_HERE.md  logcat.txt  package-lock.json  package.json
.github/workflows/: publish-npm.yml
example-app/: app.json  metro.config.js  package-lock.json  package.json
example-app/app/: _layout.tsx
example-app/app/(tabs)/: index.tsx
expo-module/: LxmfReactNative.podspec  README.md  app.plugin.js  expo-module.config.js  expo-module.config.json  package.json  tsconfig.json
expo-module/android/: build.gradle  build.gradle.kts
expo-module/android/src/main/kotlin/expo/modules/lxmf/: BleManager.kt  LxmfModule.kt  NusManager.kt
expo-module/example/: metro.config.js  package-lock.json  package.json
expo-module/example/app/: _layout.tsx
expo-module/example/app/(tabs)/: _layout.tsx  conversations.tsx  index.tsx  network.tsx  settings.tsx
expo-module/example/app/conversation/: [address].tsx
expo-module/example/components/ui/: icon-symbol.tsx
expo-module/example/context/: LxmfContext.tsx
expo-module/ios/: BLEManager.swift  LxmfModule.swift
expo-module/ios/RustCore/liblxmf_rn.xcframework/: Info.plist
expo-module/src/: LxmfModule.ts  index.ts  useLxmf.ts
rust-core/: Cargo.toml
rust-core/.cargo/: config.toml
rust-core/archive/: README.md  reticulum_bridge.rs.legacy
rust-core/patches/rns-transport/: Cargo.toml
rust-core/src/: beacon.rs  beacon_server.rs  ble_iface.rs  ffi.rs  framing.rs  group.rs  jni_bridge.rs  lib.rs  log_bridge.rs  node.rs  nus_iface.rs  solana_tx.rs  store.rs
rust-core/src/tests/: beacon_announce.rs  ble_pending_flush.rs  ble_synthetic_announce.rs  event_decode.rs  interface_parsing.rs  lxmf_wire.rs  media_fields.rs  mod.rs  msgpack_decode.rs  msgpack_encode.rs  node_queue.rs  store_persist.rs
scripts/: build-rust-android.sh  build-rust-ios.sh
